--- a/Lesson 3/Task1/index.html
+++ b/Lesson 3/Task1/index.html
@@ -8,7 +8,24 @@
 </head>
 
 <body>
-    <div>Hello world</div>
+    <div>
+        <p>i am unordered list</p>
+        <ul>
+            <li>List 1</li>
+            <li>List 2</li>
+            <li>List 3
+                <li>List 4</li>
+        </ul>
+        <p>i am ordered list</p>
+        <ol>
+            <li>List 1</li>
+            <br>
+            <li>List 2</li>
+            <li>List 3</li>
+            <hr>
+            <li>List 4</li>
+        </ol>
+    </div>
 </body>
 
 </html>
